; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/hhkb/rn42/extr_rn42_task.c_status_led.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/hhkb/rn42/extr_rn42_task.c_status_led.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DDRE = common dso_local global i32 0, align 4
@PORTE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @status_led to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @status_led(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32, i32* @DDRE, align 4
  %7 = or i32 %6, 64
  store i32 %7, i32* @DDRE, align 4
  %8 = load i32, i32* @PORTE, align 4
  %9 = and i32 %8, -65
  store i32 %9, i32* @PORTE, align 4
  br label %15

10:                                               ; preds = %1
  %11 = load i32, i32* @DDRE, align 4
  %12 = or i32 %11, 64
  store i32 %12, i32* @DDRE, align 4
  %13 = load i32, i32* @PORTE, align 4
  %14 = or i32 %13, 64
  store i32 %14, i32* @PORTE, align 4
  br label %15

15:                                               ; preds = %10, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
